# HOLA

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE.txt  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-research.txt  requirements.txt  run.sh  setup.py  yamllint.yaml
.azuredevops/pipelines/: ci2.yml
.azuredevops/templates/: pyenv_install.yml
.cargo/: audit.toml
.github/: dependabot.yml
.github/scripts/: build_simple_index.py  test_build_simple_index.py
.github/workflows/: audit.yml  ci.yml  release.yml
analysis/infra/: data_persister.py  igr_runner.py  parallel_runner.py  parallel_runner_win.py  plots.py  run_helpers.py
analysis/optimizers/benchmarks/: ackley.py  boosted_regressor.py  branin.py  bukin_6.py  cross_in_tray.py  drop_wave.py  egg_holder.py  forrester.py  holder_table.py  levy_13.py  rastrigin.py  schwefel.py  six_hump_camel.py
analysis/optimizers/benchmarks/common/: hyperopt_common.py  pymoo_common.py
analysis/optimizers/config/: ga_config.py  hola_config.py
analysis/optimizers/examples/: hooke_jeeves_example.py  skopt_gp_example.py
analysis/plots/: ackley_2d.html  ackley_5d.html  ackley_7d.html  branin.html  bukin6.html  cross_in_tray.html  drop_wave.html  egg_holder.html  forrester.html  gboosted_regress.html  holder_table.html  levy_13.html  mean_means_of_normalized_large_iter.html  mean_means_of_normalized_small_iter.html  rastrigin_2d.html  rastrigin_5d.html  rastrigin_7d.html  schwefel_2d.html  schwefel_5d.html  schwefel_7d.html  six_hump_camel.html
benchmarks/hard_to_optimize_functions/: ackley_nd.py  branin_2d.py  bukin_6_2d.py  cross_in_tray_2d.py  drop_wave_2d.py  egg_holder_2d.py  forrester_1d.py  gramacy_lee_1d.py  holder_table_2d.py  levy_13_2d.py  michalewicz_nd.py  rastrigin_nd.py  rosenbrock_nd.py  schaffer_2_2d.py  schaffer_4_2d.py  schwefel_nd.py  shubert_2d.py  six_hump_camel_2d.py
dashboard/: app.js  index.html  styles.css  xss-smoke-checkpoint.json
dashboard/tests/: package-lock.json  package.json  xss_dom.test.mjs
docs/: cli-guide.md  concepts.md  dashboard.md  getting-started.md  index.md  python-guide.md  rest-api.md  rust-guide.md
docs/javascripts/: mathjax.js
hola/: Cargo.toml  algorithm.py  hola_serve  igr_algorithm.py  objective.py  params.py  sample.py  tune.py  utils.py  worker.py
hola-cli/: Cargo.toml
hola-cli/examples/: example_study.yaml
hola-cli/src/: main.rs
hola-py/: Cargo.toml  pyproject.toml
hola-py/benchmarks/: __init__.py  __main__.py
hola-py/benchmarks/adapters/: __init__.py  base.py  hola_adapter.py  igr_adapter.py  optuna_adapter.py  pymoo_multi.py  pymoo_single.py  random_double.py
hola-py/benchmarks/data/: __init__.py  normalize.py  persistence.py  schema.py
hola-py/benchmarks/functions/: __init__.py  dtlz.py  grouped_tlp.py  real_world.py  single_objective.py  wfg.py  zdt.py
hola-py/benchmarks/metrics/: hypervolume.py  igd.py  spacing.py
hola-py/benchmarks/plotting/: export.py  multi_objective.py  single_objective.py  style.py
hola-py/benchmarks/problems/: __init__.py  grouped_tlp.py  multi_objective.py  registry.py  single_objective.py
hola-py/benchmarks/runner/: config.py  executor.py  run_multi_objective.py  run_single_objective.py
hola-py/examples/: basic_optimization.py  categorical_demo.py  dashboard_stress_test.py  gmm_explore_exploit.py  ml_hyperparameters.py  multi_objective.py
hola-py/hola/: __init__.py  __init__.pyi
hola-py/hola_opt/: __init__.py  __init__.pyi
hola-py/src/: lib.rs
hola-py/tests/: conftest.py  test_benchmarks_smoke.py  test_cli.py  test_dashboard_security.py  test_doc_examples.py  test_examples.py  test_ffi_roundtrip.py  test_hola.py  test_server.py  test_stubs.py  test_study_advanced.py  test_wfg.py
hola/src/: hola_engine.rs  lib.rs  server.rs
hola/tests/integration/: end_to_end.rs  hola_engine.rs  main.rs  server.rs
issues/: 08-autostrategy-pending-trial-accounting.md  09-ranking-refit-scalability.md  10-dependency-feature-minimization.md
notebooks/: 1d_example.ipynb  1d_example_readme.ipynb  function_example.ipynb  function_example_MC.ipynb  ml_test_parallel.ipynb  param_test.ipynb  portfolio_example.ipynb  sobol.ipynb  sobol_2.ipynb
notebooks/portfolio_example/: portfolio_hyper.ipynb
notebooks/server_test/: laho_objectives.json  laho_params.json  request.py  server_test.ipynb  server_test_multi.ipynb  server_test_worker.ipynb
opt_engine/: Cargo.toml
opt_engine/examples/: pareto_front.rs  persistence.rs  rastrigin_gmm.rs
opt_engine/src/: engine.rs  leaderboard.rs  lib.rs  objectives.rs  persistence.rs  scales.rs  server.rs  test_helpers.rs  traits.rs
opt_engine/src/spaces/: categorical.rs  combinators.rs  continuous.rs  discrete.rs  mod.rs
opt_engine/src/strategies/: gmm.rs  mod.rs  random.rs  sobol.rs
opt_engine/src/transformers/: json_field.rs  json_tlp.rs  json_tlp_grouped.rs  json_weighted.rs  mod.rs
opt_engine/tests/integration/: dyn_engine.rs  end_to_end.rs  engine.rs  leaderboard_scalability.rs  main.rs  server.rs
simple/: index.html
simple/hola-opt/: index.html
tests/: __init__.py  test_igr.py  test_objective.py  test_params.py  test_tuning.py
