[package]
name = "hola-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "hola"
path = "src/main.rs"

[dependencies]
hola = { path = "../hola", features = ["server"], version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
