[package]
name = "hola-py"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "hola_opt"
crate-type = ["cdylib"]

[dependencies]
hola_engine = { package = "hola", version = "0.1.0", path = "../hola", features = ["server"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
