[package]
name = "hola-py"
version = "1.0.1-rc6"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "hola_opt"
crate-type = ["cdylib"]

[dependencies]
hola_engine = { package = "hola", version = "1.0.1-rc6", path = "../hola", features = ["server"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
serde_json = "1"
# Python bindings construct Tokio runtimes for local engine calls and remote HTTP.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
