[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hola-opt"
version = "0.1.0"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["hola_opt"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
docs = [
    "mkdocs-material>=9.0",
]
benchmarks = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "optuna>=3.0",
    "pymoo>=0.6",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "examples: example script smoke tests",
    "benchmarks: benchmark framework smoke tests",
    "doctest_md: documentation code block tests",
]
testpaths = ["tests"]

[tool.ty.rules]
# hola is a native PyO3 extension — only exists after `maturin develop`
unresolved-import = "ignore"
