[build-system]
requires = ["maturin>=1.14.0,<2.0"]
build-backend = "maturin"

[project]
name = "hola-opt"
version = "1.0.1-rc7"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["hola_opt"]

[dependency-groups]
dev = [
    "maturin>=1.14.0",
    "pytest>=9.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.17",
    "ty>=0.0.50",
]
docs = [
    "mkdocs-material>=9.7.6",
]
benchmarks = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
    "optuna>=4.9.0",
    "pymoo>=0.6.1.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "examples: example script smoke tests",
    "benchmarks: benchmark framework smoke tests",
    "doctest_md: documentation code block tests",
]
testpaths = ["tests"]

[tool.ty.rules]
# hola is a native PyO3 extension — only exists after `maturin develop`
unresolved-import = "ignore"
