[package]
name = "opt_engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
sobol_burley = "0.5"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
rand_distr = "0.5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
