[package]
name = "opt_engine"
version = "1.0.1-rc6"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Engine internals need async locks and blocking refit tasks; tests/examples use Tokio macros.
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
rand = "0.9.3"
sobol_burley = "0.5"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
rand_distr = "0.5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
