[package]
name = "opt_engine"
version = "1.0.1-rc7"
edition = "2024"
license = "Apache-2.0"
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Engine internals need async locks and blocking refit tasks; tests/examples use Tokio macros.
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
rand = "0.9.3"
sobol_burley = "0.5"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
rand_distr = "0.5"
# Only need wall-clock time (Utc::now()/timestamp()); dropping default features
# avoids the wasm-bindgen/js-sys dependency chain.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
